# ClickAndMeow.Rust

./: .gitignore  CITATION.cff  Cargo.toml  Package.swift  README.md  package.json  pnpm-lock.yaml  settings.gradle.kts  uniffi.toml
.github/workflows/: checks.yml  publish.yml
examples/rust/: Cargo.toml
kotlin/: build.gradle.kts
src/: error.rs  establishment.rs  lib.rs  login.rs  menu.rs  session.rs
src/definitions/: date.rs  dish.rs  establishment.rs  menu.rs  mod.rs
swift/: clickandmeow.swift
